--- a/SAFAR-frontend/safar/src/index.css
+++ b/SAFAR-frontend/safar/src/index.css
@@ -7,6 +7,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Poppins', sans-serif;
   background-color: #83A2FF;
+
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 code {
